GetLatestInFlightSurface should output something for non-existent fallbacks

GetLatestInFlightSurface should not return nullptr if fallback doesn't exist.
Instead it should try to search for active surfaces in primary's FrameSinkId.

Bug: 875381
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I8940c374b7f52f728e4d88c88358aeb177dc8520
Reviewed-on: https://chromium-review.googlesource.com/1179989
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Andre Kaba <akaba@google.com>
Cr-Commit-Position: refs/heads/master@{#585139}
Former-commit-id: b4ebe5509cd8f1440c45772e827e26bb0a8117f7